# llm-api-router

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  QWEN.md  README.md  client_example.py  coverage.xml  example.py  example_openai_client.py  llm_router_config.example.json  main.py  pyproject.toml  test_model_mapping.py  test_openai_client.py  test_openai_client_integration.py  test_provider_model_mapping.py  test_real_openai_integration.py  test_sse_integration.py  test_streaming_verification.py
.claude/: settings.local.json
.github/workflows/: test.yml
llm_api_router/: __init__.py  analytics.py  cli.py  config.py  exceptions.py  log_compression.py  logging.py  models.py  rate_limiter.py  router.py  server.py  stats.py
llm_api_router/providers/: __init__.py  anthropic.py  base.py  openai.py
llm_api_router/static/: index.html
tests/: conftest.py  test_anthropic_client_real.py  test_config.py  test_csv_logging.py  test_exceptions.py  test_log_compression.py  test_merge_anthropic_chunk.py  test_merge_openai_chunk.py  test_metrics.py  test_models.py  test_models_common.py  test_models_moved.py  test_openai_client_real.py  test_openai_integration.py  test_providers.py  test_rate_limiter.py  test_router.py  test_stats.py  test_streaming.py  test_user_agent_logging.py
