[project]
name = "llm-api-router"
version = "0.1.0"
description = "LLM API router with OpenAI and Anthropic support with priority fallback"
authors = [
    {name = "Jiajie Chen",email = "c@jia.je"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=2.14.0,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
