[project]
name = "llm-api-router"
version = "0.1.0"
description = "LLM API router with OpenAI and Anthropic support with priority fallback"
authors = [
    {name = "Jiajie Chen",email = "c@jia.je"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=2.14.0,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "click (>=8.3.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
ruff = "^0.14.10"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B023",  # Function definition does not bind loop variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused import

[tool.mypy]
exclude = ["tests"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[project.scripts]
llm-api-router = "llm_api_router.cli:main"

